--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.1.0",
-    "react-native": "0.70.6"
+    "react-native": "0.70.6",
+    "react-native-gl-model-view": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
